Changes to winner evaluation method